--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -396,8 +396,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(242 192 102 / var(--tw-bg-opacity));
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: 1rem;
@@ -450,7 +450,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .btn-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(205 167 167 / var(--tw-bg-opacity));
+  background-color: rgb(151 105 105 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -710,6 +710,36 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-\[60\%\] {
   left: 60%;
 }
+.bottom-\[5px\] {
+  bottom: 5px;
+}
+.top-\[90px\] {
+  top: 90px;
+}
+.right-\[-100px\] {
+  right: -100px;
+}
+.top-\[280px\] {
+  top: 280px;
+}
+.right-\[-130px\] {
+  right: -130px;
+}
+.top-\[320px\] {
+  top: 320px;
+}
+.left-\[-50px\] {
+  left: -50px;
+}
+.top-\[70px\] {
+  top: 70px;
+}
+.left-\[-130px\] {
+  left: -130px;
+}
+.top-\[50px\] {
+  top: 50px;
+}
 .bottom-\[-50px\] {
   bottom: -50px;
 }
@@ -719,8 +749,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .right-\[0px\] {
   right: 0px;
 }
-.bottom-\[5px\] {
-  bottom: 5px;
+.top-6 {
+  top: 1.5rem;
+}
+.left-\[-5px\] {
+  left: -5px;
 }
 .z-10 {
   z-index: 10;
@@ -752,6 +785,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .col-span-full {
   grid-column: 1 / -1;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
 .col-start-2 {
   grid-column-start: 2;
 }
@@ -766,6 +802,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .row-\[1\/1\] {
   grid-row: 1 / 1;
+}
+.row-span-3 {
+  grid-row: span 3 / span 3;
 }
 .row-start-1 {
   grid-row-start: 1;
@@ -949,6 +988,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-ml-1 {
   margin-left: -0.25rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .block {
   display: block;
 }
@@ -1014,6 +1056,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-\[60px\] {
   height: 60px;
+}
+.h-\[7px\] {
+  height: 7px;
+}
+.h-\[147px\] {
+  height: 147px;
 }
 .max-h-60 {
   max-height: 15rem;
@@ -1093,6 +1141,27 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[60px\] {
   width: 60px;
 }
+.w-\[150px\] {
+  width: 150px;
+}
+.w-\[50\%\] {
+  width: 50%;
+}
+.w-\[80\%\] {
+  width: 80%;
+}
+.w-\[130px\] {
+  width: 130px;
+}
+.w-\[300px\] {
+  width: 300px;
+}
+.w-\[50px\] {
+  width: 50px;
+}
+.w-\[32px\] {
+  width: 32px;
+}
 .max-w-none {
   max-width: none;
 }
@@ -1147,11 +1216,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[481px\] {
   max-width: 481px;
 }
+.max-w-\[120px\] {
+  max-width: 120px;
+}
 .max-w-\[300px\] {
   max-width: 300px;
 }
 .max-w-\[410px\] {
   max-width: 410px;
+}
+.max-w-\[347px\] {
+  max-width: 347px;
 }
 .flex-\[1\] {
   flex: 1;
@@ -1165,11 +1240,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-\[0_1_100\%\] {
   flex: 0 1 100%;
 }
-.flex-1 {
-  flex: 1 1 0%;
-}
 .flex-none {
   flex: none;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .flex-\[0_1_50\%\] {
   flex: 0 1 50%;
@@ -1250,6 +1325,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .grid-flow-row {
   grid-auto-flow: row;
+}
+.grid-flow-col {
+  grid-auto-flow: column;
 }
 .grid-cols-mobile {
   grid-template-columns: minmax(0, 1fr) repeat(2, minmax(auto, calc((450px - (1 * 20px)) / 2))) minmax(0, 1fr);
@@ -1368,6 +1446,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-b {
   border-bottom-width: 1px;
 }
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1383,14 +1464,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-neutral-400 {
   --tw-border-opacity: 1;
   border-color: rgb(208 201 205 / var(--tw-border-opacity));
-}
-.border-neutral-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(246 244 245 / var(--tw-border-opacity));
-}
-.border-neutral-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 236 238 / var(--tw-border-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -1431,13 +1504,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(45 212 191 / var(--tw-bg-opacity));
 }
-.bg-secondary-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 192 102 / var(--tw-bg-opacity));
-}
 .bg-success-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 242 242 / var(--tw-bg-opacity));
+}
+.bg-secondary-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 192 102 / var(--tw-bg-opacity));
 }
 .bg-teal-200 {
   --tw-bg-opacity: 1;
@@ -1516,6 +1589,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-0 {
+  padding: 0px;
 }
 .p-9 {
   padding: 2.25rem;
@@ -1598,6 +1674,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .py-\[1\.13rem\] {
   padding-top: 1.13rem;
@@ -1794,14 +1874,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-normal {
   font-weight: 400;
 }
+.font-bold {
+  font-weight: 700;
+}
 .font-black {
   font-weight: 900;
 }
 .font-light {
   font-weight: 300;
-}
-.font-bold {
-  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1994,6 +2074,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .opacity-75 {
   opacity: 0.75;
 }
+.opacity-80 {
+  opacity: 0.8;
+}
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -2034,6 +2117,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 27px 28px 43px 13px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-xxl-red {
+  --tw-shadow: 27px 28px 43px 13px rgba(176, 131, 131, 0.24);
+  --tw-shadow-colored: 27px 28px 43px 13px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2053,6 +2141,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .ring-teal-400 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(45 212 191 / var(--tw-ring-opacity));
@@ -2067,14 +2160,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ring-offset-4 {
   --tw-ring-offset-width: 4px;
 }
+.ring-offset-1 {
+  --tw-ring-offset-width: 1px;
+}
 .ring-offset-neutral-50 {
   --tw-ring-offset-color: #FCFAFB;
 }
-.ring-offset-primary-600 {
-  --tw-ring-offset-color: var(--primary-plum-600);
-}
 .ring-offset-white {
   --tw-ring-offset-color: #fff;
+}
+.ring-offset-primary-600 {
+  --tw-ring-offset-color: var(--primary-plum-600);
 }
 .blur {
   --tw-blur: blur(8px);
@@ -2397,12 +2493,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(205 167 167 / var(--tw-ring-opacity));
 }
-.focus\:ring-primary-600:focus {
-  --tw-ring-color: var(--primary-plum-600);
-}
 .focus\:ring-secondary-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
+}
+.focus\:ring-teal-400:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(45 212 191 / var(--tw-ring-opacity));
+}
+.focus\:ring-offset-4:focus {
+  --tw-ring-offset-width: 4px;
 }
 .focus-visible\:border-indigo-500:focus-visible {
   --tw-border-opacity: 1;
@@ -2431,26 +2531,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-y: .97;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.active\:scale-\[\.98\]:active {
-  --tw-scale-x: .98;
-  --tw-scale-y: .98;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .active\:scale-\[\.8\]:active {
   --tw-scale-x: .8;
   --tw-scale-y: .8;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.active\:scale-\[\.98\]:active {
+  --tw-scale-x: .98;
+  --tw-scale-y: .98;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .active\:bg-neutral-400:active {
   --tw-bg-opacity: 1;
   background-color: rgb(208 201 205 / var(--tw-bg-opacity));
 }
-.active\:bg-secondary-500:active {
-  background-color: var(--secondary-500);
-}
 .active\:bg-success-200:active {
   --tw-bg-opacity: 1;
   background-color: rgb(199 216 216 / var(--tw-bg-opacity));
+}
+.active\:bg-secondary-500:active {
+  background-color: var(--secondary-500);
 }
 .active\:text-success-600:active {
   --tw-text-opacity: 1;
@@ -2459,13 +2559,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .active\:ring-offset-primary-600:active {
   --tw-ring-offset-color: var(--primary-plum-600);
 }
-.disabled\:bg-neutral-500:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 146 154 / var(--tw-bg-opacity));
-}
 .disabled\:bg-neutral-200:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(239 236 238 / var(--tw-bg-opacity));
+}
+.disabled\:bg-neutral-500:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 146 154 / var(--tw-bg-opacity));
 }
 .disabled\:text-neutral-400:disabled {
   --tw-text-opacity: 1;
@@ -2600,6 +2700,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 0px;
     margin-bottom: 0px;
   }
+  .tablet\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .tablet\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
   .tablet\:mr-2 {
     margin-right: 0.5rem;
   }
@@ -2657,6 +2765,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mt-10 {
     margin-top: 2.5rem;
   }
+  .tablet\:mt-20 {
+    margin-top: 5rem;
+  }
   .tablet\:mb-20 {
     margin-bottom: 5rem;
   }
@@ -2681,6 +2792,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:w-\[1132px\] {
     width: 1132px;
   }
+  .tablet\:w-full {
+    width: 100%;
+  }
   .tablet\:max-w-\[500px\] {
     max-width: 500px;
   }
@@ -2692,6 +2806,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:max-w-\[630px\] {
     max-width: 630px;
+  }
+  .tablet\:max-w-\[490px\] {
+    max-width: 490px;
   }
   .tablet\:flex-\[0_1_auto\] {
     flex: 0 1 auto;
@@ -2844,8 +2961,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:left-\[75\%\] {
     left: 75%;
   }
+  .laptop\:left-\[-107px\] {
+    left: -107px;
+  }
+  .laptop\:top-\[220px\] {
+    top: 220px;
+  }
+  .laptop\:top-\[-40px\] {
+    top: -40px;
+  }
   .laptop\:bottom-\[-70px\] {
     bottom: -70px;
+  }
+  .laptop\:z-10 {
+    z-index: 10;
+  }
+  .laptop\:z-0 {
+    z-index: 0;
   }
   .laptop\:col-span-12 {
     grid-column: span 12 / span 12;
@@ -2915,6 +3047,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:ml-\[25px\] {
     margin-left: 25px;
   }
+  .laptop\:mr-3 {
+    margin-right: 0.75rem;
+  }
+  .laptop\:ml-\[120px\] {
+    margin-left: 120px;
+  }
   .laptop\:mb-24 {
     margin-bottom: 6rem;
   }
@@ -2963,6 +3101,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:max-w-\[700px\] {
     max-width: 700px;
   }
+  .laptop\:max-w-\[350px\] {
+    max-width: 350px;
+  }
   .laptop\:flex-\[0_1_41\%\] {
     flex: 0 1 41%;
   }
@@ -2987,6 +3128,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:justify-start {
     justify-content: flex-start;
+  }
+  .laptop\:justify-end {
+    justify-content: flex-end;
   }
   .laptop\:justify-center {
     justify-content: center;
@@ -3083,6 +3227,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:top-\[80\%\] {
     top: 80%;
   }
+  .desktop\:right-\[-187px\] {
+    right: -187px;
+  }
+  .desktop\:right-\[-220px\] {
+    right: -220px;
+  }
+  .desktop\:left-\[-150px\] {
+    left: -150px;
+  }
+  .desktop\:top-\[320px\] {
+    top: 320px;
+  }
+  .desktop\:left-\[-200px\] {
+    left: -200px;
+  }
+  .desktop\:top-\[60px\] {
+    top: 60px;
+  }
   .desktop\:col-span-5 {
     grid-column: span 5 / span 5;
   }
@@ -3110,6 +3272,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-end-13 {
     grid-column-end: 13;
   }
+  .desktop\:col-end-\[7\] {
+    grid-column-end: 7;
+  }
   .desktop\:col-end-\[14\] {
     grid-column-end: 14;
   }
@@ -3134,6 +3299,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:ml-auto {
     margin-left: auto;
+  }
+  .desktop\:ml-\[150px\] {
+    margin-left: 150px;
   }
   .desktop\:mt-32 {
     margin-top: 8rem;
