--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -389,7 +389,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .btn {
   display: flex;
   flex: 1 1 0%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -432,21 +431,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-color: var(--secondary-500);
-}
-.btn:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 146 154 / var(--tw-bg-opacity));
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(161 146 154 / var(--tw-ring-opacity));
-}
-.btn:hover:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 146 154 / var(--tw-bg-opacity));
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(161 146 154 / var(--tw-ring-opacity));
 }
 .btn-primary {
   --tw-bg-opacity: 1;
@@ -852,6 +836,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-2 {
   margin: 0.5rem;
 }
+.-m-3 {
+  margin: -0.75rem;
+}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -998,6 +985,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-3 {
   margin-left: 0.75rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .mb-28 {
   margin-bottom: 7rem;
 }
@@ -1018,9 +1008,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-52 {
   margin-top: 13rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
 }
 .-ml-1 {
   margin-left: -0.25rem;
@@ -1099,6 +1086,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-\[100vh\] {
   height: 100vh;
+}
+.h-\[57px\] {
+  height: 57px;
 }
 .h-\[60px\] {
   height: 60px;
@@ -1193,6 +1183,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[20px\] {
   width: 20px;
 }
+.w-screen {
+  width: 100vw;
+}
+.w-\[57px\] {
+  width: 57px;
+}
 .w-\[800px\] {
   width: 800px;
 }
@@ -1216,9 +1212,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-\[32px\] {
   width: 32px;
-}
-.min-w-full {
-  min-width: 100%;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -1277,6 +1270,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[20px\] {
   max-width: 20px;
 }
+.max-w-sm {
+  max-width: 24rem;
+}
 .max-w-\[743px\] {
   max-width: 743px;
 }
@@ -1325,6 +1321,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-\[0_1_50\%\] {
   flex: 0 1 50%;
 }
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1351,6 +1350,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .translate-x-\[-100\%\] {
   --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-1 {
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-\[352deg\] {
@@ -1418,6 +1425,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .grid-cols-navMobile {
   grid-template-columns: minmax(50px, 1fr) minmax(50px, auto) minmax(50px, auto);
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .flex-row {
   flex-direction: row;
 }
@@ -1450,6 +1460,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .justify-between {
   justify-content: space-between;
+}
+.gap-8 {
+  gap: 2rem;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
@@ -1520,6 +1536,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-\[1px\] {
   border-width: 1px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-l-4 {
   border-left-width: 4px;
 }
@@ -1543,6 +1562,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-primary-300 {
   --tw-border-opacity: 1;
   border-color: rgb(205 167 167 / var(--tw-border-opacity));
+}
+.border-success-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(143 177 177 / var(--tw-border-opacity));
 }
 .border-neutral-400 {
   --tw-border-opacity: 1;
@@ -1634,6 +1657,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(240 214 199 / var(--tw-bg-opacity));
 }
+.bg-success-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 229 229 / var(--tw-bg-opacity));
+}
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
 .bg-success-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 113 113 / var(--tw-bg-opacity));
@@ -1644,10 +1675,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .bg-primary-50 {
   background-color: var(--primary-plum-50);
-}
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 .stroke-warning-400 {
   stroke: #F3CB48;
@@ -1676,6 +1703,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-1 {
   padding: 0.25rem;
 }
+.p-7 {
+  padding: 1.75rem;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.p-\[10px\] {
+  padding: 10px;
+}
 .p-\[12px\] {
   padding: 12px;
 }
@@ -1685,17 +1721,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-2\.5 {
   padding: 0.625rem;
 }
-.p-2 {
-  padding: 0.5rem;
-}
 .p-0 {
   padding: 0px;
 }
 .p-9 {
   padding: 2.25rem;
-}
-.p-7 {
-  padding: 1.75rem;
 }
 .py-1 {
   padding-top: 0.25rem;
@@ -2144,6 +2174,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
+.text-charcoal-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 30 33 / var(--tw-text-opacity));
+}
 .text-success-600 {
   --tw-text-opacity: 1;
   color: rgb(79 113 113 / var(--tw-text-opacity));
@@ -2163,6 +2197,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-primary-200 {
   --tw-text-opacity: 1;
   color: rgb(240 214 199 / var(--tw-text-opacity));
+}
+.text-opacity-90 {
+  --tw-text-opacity: 0.9;
+}
+.text-opacity-70 {
+  --tw-text-opacity: 0.7;
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -2259,6 +2299,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.ring-0 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .ring-2 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2277,6 +2322,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ring-offset-4 {
   --tw-ring-offset-width: 4px;
+}
+.ring-offset-0 {
+  --tw-ring-offset-width: 0px;
 }
 .ring-offset-1 {
   --tw-ring-offset-width: 1px;
@@ -2319,6 +2367,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.\!transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter !important;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter !important;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter !important;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration: 150ms !important;
+}
 .transition-shadow {
   transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2344,11 +2399,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .duration-600 {
   transition-duration: 600ms;
 }
+.duration-150 {
+  transition-duration: 150ms;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .will-change-auto {
   will-change: auto;
@@ -2532,6 +2593,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
+.hover\:border-4:hover {
+  border-width: 4px;
+}
+.hover\:border-success-600:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(79 113 113 / var(--tw-border-opacity));
+}
 .hover\:bg-indigo-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
@@ -2544,6 +2612,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(242 192 102 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.hover\:bg-success-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(105 151 151 / var(--tw-bg-opacity));
+}
 .hover\:text-primary-400:hover {
   --tw-text-opacity: 1;
   color: rgb(159 98 98 / var(--tw-text-opacity));
@@ -2552,9 +2628,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(205 167 167 / var(--tw-text-opacity));
 }
+.hover\:text-success-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(79 113 113 / var(--tw-text-opacity));
+}
 .hover\:text-teal-400:hover {
   --tw-text-opacity: 1;
   color: rgb(45 212 191 / var(--tw-text-opacity));
+}
+.hover\:text-opacity-100:hover {
+  --tw-text-opacity: 1;
 }
 .hover\:shadow-xxl-red:hover {
   --tw-shadow: 27px 28px 43px 13px rgba(176, 131, 131, 0.24);
@@ -2564,6 +2647,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:ring:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.hover\:ring-0:hover {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .hover\:ring-teal-400:hover {
@@ -2581,6 +2669,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:ring-primary-400:hover {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(159 98 98 / var(--tw-ring-opacity));
+}
+.hover\:ring-offset-0:hover {
+  --tw-ring-offset-width: 0px;
 }
 .hover\:ring-offset-primary-300:hover {
   --tw-ring-offset-color: #CDA7A7;
@@ -2640,12 +2731,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus-visible\:ring:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus-visible\:ring-white:focus-visible {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
+.focus-visible\:ring-orange-500:focus-visible {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(249 115 22 / var(--tw-ring-opacity));
+}
 .focus-visible\:ring-opacity-75:focus-visible {
   --tw-ring-opacity: 0.75;
+}
+.focus-visible\:ring-opacity-50:focus-visible {
+  --tw-ring-opacity: 0.5;
 }
 .focus-visible\:ring-offset-2:focus-visible {
   --tw-ring-offset-width: 2px;
@@ -2723,6 +2826,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .group:hover .group-hover\:bg-primary-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(141 92 92 / var(--tw-bg-opacity));
+}
+.group:hover .group-hover\:text-opacity-80 {
+  --tw-text-opacity: 0.8;
 }
 .group:hover .group-hover\:svg-\[var\(--primary-plum-300\)\] {
   fill: var(--primary-plum-300);
@@ -3012,6 +3118,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:max-w-\[630px\] {
     max-width: 630px;
+  }
+  .tablet\:max-w-lg {
+    max-width: 32rem;
   }
   .tablet\:max-w-\[415px\] {
     max-width: 415px;
@@ -3511,6 +3620,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+  .laptop\:font-semibold {
+    font-weight: 600;
   }
   .laptop\:font-medium {
     font-weight: 500;
